api 연동 엔드포인트 생성