@@ -1,79 +1,62 @@
 package com.nlp.back.service.community.friend;
 
-import com.nlp.back.dto.community.friend.request.FriendAcceptRequest;
-import com.nlp.back.dto.community.friend.request.FriendRejectRequest;
-import com.nlp.back.dto.community.friend.request.FriendRequestSendRequest;
-import com.nlp.back.dto.community.friend.response.BlockedFriendListResponse;
-import com.nlp.back.dto.community.friend.response.FriendListResponse;
-import com.nlp.back.dto.community.friend.response.FriendRequestListResponse;
-import com.nlp.back.dto.community.friend.response.FriendSearchResponse;
+import com.nlp.back.dto.community.friend.request.*;
+import com.nlp.back.dto.community.friend.response.*;
 import com.nlp.back.entity.auth.User;
-import com.nlp.back.entity.friend.Friend;
-import com.nlp.back.entity.friend.FriendBlock;
-import com.nlp.back.entity.friend.FriendRequest;
+import com.nlp.back.entity.friend.*;
 import com.nlp.back.global.exception.CustomException;
+import com.nlp.back.global.exception.ErrorCode;
 import com.nlp.back.repository.auth.UserRepository;
 import com.nlp.back.repository.friend.FriendBlockRepository;
+import com.nlp.back.repository.friend.FriendReportRepository;
 import com.nlp.back.repository.friend.FriendRepository;
 import com.nlp.back.repository.friend.FriendRequestRepository;
-import com.nlp.back.security.auth.CustomUserDetails;
-import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
+import com.nlp.back.util.SessionUtil;
+import jakarta.servlet.http.HttpServletRequest;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
-/**
- * 친구 관련 서비스
- */
 @Service
-@RequiredArgsConstructor
 public class FriendService {
 
     private final FriendRepository friendRepository;
     private final FriendRequestRepository friendRequestRepository;
     private final FriendBlockRepository friendBlockRepository;
+    private final FriendReportRepository friendReportRepository;
     private final UserRepository userRepository;
+    private final RedisTemplate<String, String> redisTemplate;
 
-    private Long getCurrentUserId() {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        if (auth == null || !auth.isAuthenticated()) throw new CustomException("로그인 정보가 없습니다.");
-
-        Object principal = auth.getPrincipal();
-        if (principal instanceof CustomUserDetails userDetails) {
-            return userDetails.getUserId();
-        }
-
-        throw new CustomException("사용자 정보를 불러올 수 없습니다.");
+    // @Qualifier를 "stringRedisTemplateCustom"으로 변경!
+    public FriendService(
+            FriendRepository friendRepository,
+            FriendRequestRepository friendRequestRepository,
+            FriendBlockRepository friendBlockRepository,
+            FriendReportRepository friendReportRepository,
+            UserRepository userRepository,
+            @Qualifier("stringRedisTemplateCustom") RedisTemplate<String, String> redisTemplate
+    ) {
+        this.friendRepository = friendRepository;
+        this.friendRequestRepository = friendRequestRepository;
+        this.friendBlockRepository = friendBlockRepository;
+        this.friendReportRepository = friendReportRepository;
+        this.userRepository = userRepository;
+        this.redisTemplate = redisTemplate;
     }
 
-    private User getCurrentUser() {
-        return userRepository.findById(getCurrentUserId())
-                .orElseThrow(() -> new CustomException("사용자 정보를 불러올 수 없습니다."));
-    }
+    public void sendFriendRequest(FriendRequestSendRequest request, HttpServletRequest httpRequest) {
+        User sender = getSessionUser(httpRequest);
+        User receiver = getUser(request.getTargetUserId());
 
-    /**
-     * 친구 요청 전송
-     */
-    public void sendFriendRequest(FriendRequestSendRequest request) {
-        User sender = getCurrentUser();
-        User receiver = userRepository.findById(request.getTargetUserId())
-                .orElseThrow(() -> new IllegalArgumentException("대상 사용자가 존재하지 않습니다."));
-
-        if (sender.getId().equals(receiver.getId())) {
-            throw new IllegalArgumentException("자기 자신에게 친구 요청을 보낼 수 없습니다.");
-        }
-
-        if (friendRepository.existsByUserAndFriend(sender, receiver) ||
-                friendRepository.existsByUserAndFriend(receiver, sender)) {
-            throw new IllegalStateException("이미 친구 관계입니다.");
-        }
-
-        if (friendRequestRepository.findBySenderAndReceiver(sender, receiver).isPresent()) {
-            throw new IllegalStateException("이미 친구 요청을 보냈습니다.");
-        }
+        validateNotSelf(sender, receiver);
+        validateNotAlreadyFriend(sender, receiver);
+        validateNotAlreadyRequested(sender, receiver);
 
         friendRequestRepository.save(FriendRequest.builder()
                 .sender(sender)
@@ -81,149 +64,216 @@ public class FriendService {
                 .build());
     }
 
-    /**
-     * 친구 요청 수락
-     */
-    public void acceptFriendRequest(FriendAcceptRequest request) {
-        User receiver = getCurrentUser();
-        User sender = userRepository.findById(request.getRequestId())
-                .orElseThrow(() -> new IllegalArgumentException("보낸 사용자가 존재하지 않습니다."));
+    public void acceptFriendRequest(FriendAcceptRequest request, HttpServletRequest httpRequest) {
+        User receiver = getSessionUser(httpRequest);
+        FriendRequest fr = getFriendRequestById(request.getRequestId());
 
-        FriendRequest friendRequest = friendRequestRepository
-                .findBySenderAndReceiver(sender, receiver)
-                .orElseThrow(() -> new IllegalArgumentException("친구 요청이 존재하지 않습니다."));
-
-        friendRepository.save(Friend.builder().user(sender).friend(receiver).build());
-        friendRepository.save(Friend.builder().user(receiver).friend(sender).build());
-        friendRequestRepository.delete(friendRequest);
-    }
-
-    /**
-     * 친구 요청 거절
-     */
-    public void rejectFriendRequest(FriendRejectRequest request) {
-        User receiver = getCurrentUser();
-        User sender = userRepository.findById(request.getReceiverId())
-                .orElseThrow(() -> new IllegalArgumentException("보낸 사용자가 존재하지 않습니다."));
-
-        FriendRequest friendRequest = friendRequestRepository
-                .findBySenderAndReceiver(sender, receiver)
-                .orElseThrow(() -> new IllegalArgumentException("친구 요청이 존재하지 않습니다."));
-
-        friendRequestRepository.delete(friendRequest);
-    }
-
-    /**
-     * 친구 목록 조회
-     */
-    public FriendListResponse getFriendList() {
-        User me = getCurrentUser();
-        List<Friend> friends = friendRepository.findAllFriendsOfUser(me);
-
-        return new FriendListResponse(
-                friends.stream()
-                        .map(f -> f.getUser().equals(me) ? f.getFriend() : f.getUser())
-                        .distinct()
-                        .map(FriendListResponse.FriendDto::from)
-                        .collect(Collectors.toList())
-        );
-    }
-
-    /**
-     * 받은 친구 요청 목록 조회
-     */
-    public FriendRequestListResponse getReceivedFriendRequests() {
-        User me = getCurrentUser();
-        List<FriendRequest> requests = friendRequestRepository.findByReceiver(me);
-        return new FriendRequestListResponse(
-                requests.stream()
-                        .map(FriendRequestListResponse.FriendRequestDto::from)
-                        .collect(Collectors.toList())
-        );
-    }
-
-    /**
-     * 사용자 닉네임으로 검색
-     */
-    public FriendSearchResponse searchUsersByNickname(String nickname) {
-        User me = getCurrentUser();
-        List<User> users = userRepository.findByNicknameContaining(nickname);
-        return new FriendSearchResponse(
-                users.stream()
-                        .filter(user -> !user.getId().equals(me.getId())) // 자기 자신은 제외
-                        .map(user -> {
-                            boolean alreadyFriend = friendRepository.existsByUserAndFriend(me, user)
-                                    || friendRepository.existsByUserAndFriend(user, me); // 양방향 확인
-                            boolean alreadyRequested = friendRequestRepository.existsBySenderAndReceiver(me, user);
-
-                            return new FriendSearchResponse.UserSearchResult(
-                                    user.getId(),
-                                    user.getNickname(),
-                                    user.getProfileImageUrl(),
-                                    alreadyFriend,
-                                    alreadyRequested
-                            );
-                        })
-                        .collect(Collectors.toList())
-        );
-    }
-
-    /**
-     * 친구 삭제
-     */
-    public void deleteFriend(Long friendId) {
-        User me = getCurrentUser();
-        User target = userRepository.findById(friendId)
-                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
-
-        friendRepository.findByUserAndFriend(me, target).ifPresent(friendRepository::delete);
-        friendRepository.findByUserAndFriend(target, me).ifPresent(friendRepository::delete);
-    }
-
-    /**
-     * 사용자 차단
-     */
-    public void blockUser(Long userId) {
-        User me = getCurrentUser();
-        User target = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("차단 대상 사용자가 존재하지 않습니다."));
-
-        if (me.getId().equals(target.getId())) {
-            throw new IllegalArgumentException("자기 자신은 차단할 수 없습니다.");
+        if (!fr.getReceiver().equals(receiver)) {
+            throw new CustomException("요청 대상 불일치");
         }
+
+        friendRepository.save(Friend.of(fr.getSender(), receiver));
+        friendRepository.save(Friend.of(receiver, fr.getSender()));
+        friendRequestRepository.delete(fr);
+    }
+
+    public void rejectFriendRequest(FriendRejectRequest request, HttpServletRequest httpRequest) {
+        User receiver = getSessionUser(httpRequest);
+        FriendRequest fr = getFriendRequestById(request.getRequestId());
+
+        if (!fr.getReceiver().equals(receiver)) {
+            throw new CustomException("요청 대상 불일치");
+        }
+
+        friendRequestRepository.delete(fr);
+    }
+
+    public void cancelSentFriendRequest(FriendCancelRequest request, HttpServletRequest httpRequest) {
+        User sender = getSessionUser(httpRequest);
+        FriendRequest fr = getFriendRequestById(request.getRequestId());
+
+        if (!fr.getSender().equals(sender)) {
+            throw new CustomException("취소 권한 없음");
+        }
+
+        friendRequestRepository.delete(fr);
+    }
+
+    public FriendRequestListResponse getReceivedFriendRequests(HttpServletRequest httpRequest) {
+        User user = getSessionUser(httpRequest);
+        return new FriendRequestListResponse(friendRequestRepository.findByReceiver(user).stream()
+                .map(FriendRequestListResponse.FriendRequestDto::from)
+                .toList());
+    }
+
+    public SentFriendRequestListResponse getSentFriendRequests(HttpServletRequest httpRequest) {
+        User sender = getSessionUser(httpRequest);
+        return new SentFriendRequestListResponse(friendRequestRepository.findBySender(sender).stream()
+                .map(req -> SentFriendRequestListResponse.SentFriendRequestDto.builder()
+                        .requestId(req.getId())
+                        .receiverId(req.getReceiver().getId())
+                        .receiverNickname(req.getReceiver().getNickname())
+                        .receiverProfileImageUrl(req.getReceiver().getProfileImageUrl())
+                        .requestedAt(req.getRequestedAt())
+                        .status(req.getStatus().name())
+                        .build())
+                .toList());
+    }
+
+    public void deleteFriend(FriendDeleteRequest request, HttpServletRequest httpRequest) {
+        User user = getSessionUser(httpRequest);
+        User target = getUser(request.getTargetUserId());
+
+        friendRepository.findByUserAndFriend(user, target).ifPresent(friendRepository::delete);
+        friendRepository.findByUserAndFriend(target, user).ifPresent(friendRepository::delete);
+    }
+
+    public void blockUser(FriendBlockRequest request, HttpServletRequest httpRequest) {
+        User me = getSessionUser(httpRequest);
+        User target = getUser(request.getTargetUserId());
+
+        validateNotSelf(me, target);
 
         if (friendBlockRepository.findByBlockerAndBlocked(me, target).isEmpty()) {
-            friendBlockRepository.save(FriendBlock.builder()
-                    .blocker(me)
-                    .blocked(target)
-                    .build());
+            friendBlockRepository.save(FriendBlock.builder().blocker(me).blocked(target).build());
         }
 
-        deleteFriend(userId);
+        deleteFriend(FriendDeleteRequest.builder()
+                .targetUserId(target.getId())
+                .build(), httpRequest);
     }
 
-    /**
-     * 차단 해제
-     */
-    public void unblockUser(Long userId) {
-        User me = getCurrentUser();
-        User target = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("사용자가 존재하지 않습니다."));
+    public void unblockUser(FriendBlockRequest request, HttpServletRequest httpRequest) {
+        User me = getSessionUser(httpRequest);
+        User target = getUser(request.getTargetUserId());
 
-        friendBlockRepository.findByBlockerAndBlocked(me, target)
-                .ifPresent(friendBlockRepository::delete);
+        friendBlockRepository.findByBlockerAndBlocked(me, target).ifPresent(friendBlockRepository::delete);
     }
 
-    /**
-     * 내가 차단한 사용자 목록 조회
-     */
-    public BlockedFriendListResponse getBlockedUsers() {
-        User me = getCurrentUser();
-        List<FriendBlock> blocks = friendBlockRepository.findByBlocker(me);
-        return new BlockedFriendListResponse(
-                blocks.stream()
-                        .map(block -> BlockedFriendListResponse.BlockedUserDto.from(block.getBlocked()))
-                        .collect(Collectors.toList())
-        );
+    public BlockedFriendListResponse getBlockedUsers(HttpServletRequest httpRequest) {
+        User me = getSessionUser(httpRequest);
+        return new BlockedFriendListResponse(friendBlockRepository.findByBlocker(me).stream()
+                .map(block -> BlockedFriendListResponse.BlockedUserDto.from(block.getBlocked()))
+                .toList());
+    }
+
+    public FriendSearchResponse searchUsersByNickname(FriendSearchRequest request, HttpServletRequest httpRequest) {
+        User me = getSessionUser(httpRequest);
+        List<User> users = userRepository.findByNicknameContaining(request.getNickname());
+
+        return new FriendSearchResponse(users.stream()
+                .filter(u -> !u.equals(me))
+                .map(u -> new FriendSearchResponse.UserSearchResult(
+                        u.getId(),
+                        u.getNickname(),
+                        u.getProfileImageUrl(),
+                        isFriend(me, u),
+                        hasSentRequest(me, u),
+                        isBlocked(me, u)
+                )).toList());
+    }
+
+    public void reportUser(FriendReportRequest request, HttpServletRequest httpRequest) {
+        User reporter = getSessionUser(httpRequest);
+        User reported = getUser(request.getTargetUserId());
+
+        if (reporter.getId().equals(reported.getId())) {
+            throw new CustomException("자기 자신은 신고할 수 없습니다.");
+        }
+
+        if (friendReportRepository.findByReporterAndReported(reporter, reported).isPresent()) {
+            throw new CustomException(ErrorCode.ALREADY_REPORTED);
+        }
+
+        friendReportRepository.save(FriendReport.builder()
+                .reporter(reporter)
+                .reported(reported)
+                .reason(request.getReason())
+                .status(FriendReportStatus.PENDING)
+                .reportedAt(LocalDateTime.now())
+                .build());
+    }
+
+    public FriendListResponse getOnlineOfflineFriendList(HttpServletRequest request) {
+        User user = getSessionUser(request);
+        List<Friend> relations = friendRepository.findAllFriendsOfUser(user);
+
+        // 중복 제거를 위한 Set<Long> 사용
+        Set<Long> seenUserIds = new HashSet<>();
+        List<FriendListResponse.FriendDto> online = new ArrayList<>();
+        List<FriendListResponse.FriendDto> offline = new ArrayList<>();
+
+        for (Friend relation : relations) {
+            User friend = relation.getUser().equals(user) ? relation.getFriend() : relation.getUser();
+
+            // userId 중복 체크
+            if (!seenUserIds.add(friend.getId())) continue;
+
+            FriendListResponse.FriendDto dto = FriendListResponse.FriendDto.builder()
+                    .userId(friend.getId())
+                    .nickname(friend.getNickname())
+                    .profileImageUrl(friend.getProfileImageUrl())
+                    .build();
+
+            boolean isOnline = redisTemplate.hasKey("ws:connected:" + friend.getId());
+            if (isOnline) {
+                online.add(dto);
+            } else {
+                offline.add(dto);
+            }
+        }
+
+        return FriendListResponse.builder()
+                .onlineFriends(online)
+                .offlineFriends(offline)
+                .build();
+    }
+
+    // ===== 내부 유틸 =====
+
+    private User getSessionUser(HttpServletRequest request) {
+        Long userId = SessionUtil.getUserId(request);
+        return getUser(userId);
+    }
+
+    private User getUser(Long id) {
+        return userRepository.findById(id)
+                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+    }
+
+    private FriendRequest getFriendRequestById(Long id) {
+        return friendRequestRepository.findById(id)
+                .orElseThrow(() -> new CustomException("요청이 존재하지 않습니다."));
+    }
+
+    private boolean isFriend(User me, User target) {
+        return friendRepository.existsByUserAndFriend(me, target) ||
+                friendRepository.existsByUserAndFriend(target, me);
+    }
+
+    private boolean hasSentRequest(User me, User target) {
+        return friendRequestRepository.existsBySenderAndReceiver(me, target);
+    }
+
+    private boolean isBlocked(User me, User target) {
+        return friendBlockRepository.existsByBlockerAndBlocked(me, target);
+    }
+
+    private void validateNotSelf(User user, User target) {
+        if (user.equals(target)) {
+            throw new CustomException("자기 자신에 대해 수행할 수 없습니다.");
+        }
+    }
+
+    private void validateNotAlreadyFriend(User user, User target) {
+        if (isFriend(user, target)) {
+            throw new CustomException("이미 친구입니다.");
+        }
+    }
+
+    private void validateNotAlreadyRequested(User sender, User receiver) {
+        if (hasSentRequest(sender, receiver)) {
+            throw new CustomException("이미 친구 요청을 보냈습니다.");
+        }
     }
 }
